--- a/File Vari/networking.html
+++ b/File Vari/networking.html
@@ -101,25 +101,32 @@
 </nav>
 <!--END NAVBAR-->
 
-<!-- ALL DEVICES BY CATEGORY-->
+<!-- BREADCRUMB -->
 <div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb" >
+		  <li><a href="#">Devices</a></li>
+		  <li class="active">Modem & Networking </li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
+
+<!-- DEVICES GRID -->
+<div class="container-fluid devicecontainer">
 	<div class="row">
 		<div class="devicegrid">
 		<h2> MODEM & NETWORKING </h2>
 		<!-- SMARTPHONES-->
 			<div class="col-md-3">
-				
 				<form class="filters">
-					<legend>
-						<h3> FILTERS </h3>
-					</legend>
+					<h3> FILTERS </h3>
 					<legend class="filtertitle"> Price </legend>
 					<div class="filterinputs">
 						<input type="checkbox" name="price" value="1"> &lt; 50 <br>
 						<input type="checkbox" name="price" value="2"> 50-100 <br>
 						<input type="checkbox" name="price" value="3"> &gt; 100 <br>
 					</div>
-					
 					<legend class="filtertitle"> Brand </legend>
 					<div class="filterinputs">
 						<input type="checkbox" name="brand" value="AVM"> AVM <br>
@@ -138,7 +145,7 @@
 								<p>Repeater Wi-Fi AC750</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/zyxel1.jpg" alt=""></a>
+								<img src="../images/zyxel1.jpg" alt="">
 							</div>
 							<div class="pricetag"> 49,90 €
 							</div>
@@ -157,14 +164,14 @@
 								<p>FRITZ!WLAN Repeater 1750E</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/avd1.jpg" alt=""></a>
+								<img src="../images/avd1.jpg" alt="">
 							</div>
 							<div class="pricetag"> 2,50 €/month
 							</div>
 							<div class="pricediscount">	<br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -176,14 +183,14 @@
 								<p>Wi-Fi Bridge</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/techni.jpg" alt=""></a>
+								<img src="../images/techni.jpg" alt="">
 							</div>
 							<div class="pricetag" style="text-decoration: line-through;"> 79,90 €
 							</div>
 							<div class="pricediscount">	59,00 €</div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -199,14 +206,14 @@
 								<p>ERA Plus 900</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/tecnoware900.jpg" alt=""></a>
+								<img src="../images/tecnoware900.jpg" alt="">
 							</div>
 							<div class="pricetag" style="text-decoration: line-through;"> 79,90 €
 							</div>
 							<div class="pricediscount">	69,00 €</div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -218,14 +225,14 @@
 								<p>Repeater N300</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/zyxel2.jpg" alt=""></a>
+								<img src="../images/zyxel2.jpg" alt="">
 							</div>
 							<div class="pricetag">39,00 €
 							</div>
 							<div class="pricediscount"> <br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -236,7 +243,7 @@
 		</div>
 	</div>
 </div>
-<!-- END SMART LIFE CATEGORIES -->
+<!-- END DEVICES GRID -->
 
 <!--FOOTER-->
 	<div class="footer">
