--- a/File Vari/smartliving.html
+++ b/File Vari/smartliving.html
@@ -101,25 +101,31 @@
 </nav>
 <!--END NAVBAR-->
 
-<!-- ALL DEVICES BY CATEGORY-->
+<!-- BREADCRUMB -->
 <div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb" >
+		  <li><a href="#">Devices</a></li>
+		  <li class="active">TV & Smart Living </li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
+
+<!-- DEVICES GRID -->
+<div class="container-fluid devicecontainer">
 	<div class="row">
 		<div class="devicegrid">
 		<h2> TV & SMART LIVING </h2>
-		<!-- SMARTPHONES-->
 			<div class="col-md-3">
-				
 				<form class="filters">
-					<legend>
-						<h3> FILTERS </h3>
-					</legend>
+					<h3> FILTERS </h3>
 					<legend class="filtertitle"> Price </legend>
 					<div class="filterinputs">
 						<input type="checkbox" name="price" value="1"> &lt; 100 <br>
 						<input type="checkbox" name="price" value="2"> 100-200 <br>
 						<input type="checkbox" name="price" value="3"> &gt; 200 <br>
 					</div>
-					
 					<legend class="filtertitle"> Brand </legend>
 					<div class="filterinputs">
 						<input type="checkbox" name="brand" value="Apple"> Apple <br>
@@ -145,7 +151,7 @@
 								<p>Smart Home</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/dlinkSmartHome.jpg" alt=""></a>
+								<img src="../images/dlinkSmartHome.jpg" alt="">
 							</div>
 							<div class="pricetag"> 5 €/month
 							</div>
@@ -164,14 +170,14 @@
 								<p>Watch Sport 38</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/applesport.jpg" alt=""></a>
+								<img src="../images/applesport.jpg" alt="">
 							</div>
 							<div class="pricetag"> 10,28 €/month
 							</div>
 							<div class="pricediscount">	<br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -183,14 +189,14 @@
 								<p>Smart TV 50"</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/samsung_smart_tv.jpg" alt=""></a>
+								<img src="../images/samsung_smart_tv.jpg" alt="">
 							</div>
 							<div class="pricetag"> 26,08 €/month
 							</div>
 							<div class="pricediscount">	<br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -206,14 +212,14 @@
 								<p>WeR@Home</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/essence.jpg" alt=""></a>
+								<img src="../images/essence.jpg" alt="">
 							</div>
 							<div class="pricetag"> 5,50 €/month
 							</div>
 							<div class="pricediscount"> <br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -225,14 +231,14 @@
 								<p>Solo 2 Headphones</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/beats.jpg" alt=""></a>
+								<img src="../images/beats.jpg" alt="">
 							</div>
 							<div class="pricetag">199,90 €
 							</div>
 							<div class="pricediscount"> <br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -244,14 +250,14 @@
 								<p>Galaxy Gear S</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/gears.jpg" alt=""></a>
+								<img src="../images/gears.jpg" alt="">
 							</div>
 							<div class="pricetag">349,90 €
 							</div>
 							<div class="pricediscount"> <br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -267,14 +273,14 @@
 								<p>Fixed Camera with Wi-Fi</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/fixedcamera.jpg" alt=""></a>
+								<img src="../images/fixedcamera.jpg" alt="">
 							</div>
 							<div class="pricetag"> 79,90 €/month
 							</div>
 							<div class="pricediscount"> <br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -286,14 +292,14 @@
 								<p>Gear VR</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/samsungVR.jpg" alt=""></a>
+								<img src="../images/samsungVR.jpg" alt="">
 							</div>
 							<div class="pricetag"> 129,90 € 
 							</div>
 							<div class="pricediscount"> <br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -305,14 +311,14 @@
 								<p>Friends of Hue Bloom </p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/bloom.png" alt=""></a>
+								<img src="../images/bloom.png" alt="">
 							</div>
 							<div class="pricetag"> 179,95 € 
 							</div>
 							<div class="pricediscount"> <br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -324,7 +330,7 @@
 		</div>
 	</div>
 </div>
-<!-- END SMART LIFE CATEGORIES -->
+<!-- END DEVICES GRID -->
 
 <!--FOOTER-->
 	<div class="footer">
