--- a/File Vari/tablets.html
+++ b/File Vari/tablets.html
@@ -101,18 +101,25 @@
 </nav>
 <!--END NAVBAR-->
 
-<!-- ALL DEVICES BY CATEGORY-->
+<!-- BREADCRUMB -->
 <div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb" >
+		  <li><a href="#">Devices</a></li>
+		  <li class="active">Tablets & PCs </li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
+
+<!-- DEVICES GRID -->
+<div class="container-fluid devicecontainer">
 	<div class="row">
 		<div class="devicegrid">
 		<h2> TABLETS & PCs </h2>
-		<!-- SMARTPHONES-->
 			<div class="col-md-3">
-				
 				<form class="filters">
-					<legend>
-						<h3> FILTERS </h3>
-					</legend>
+					<h3> FILTERS </h3>
 					<legend class="filtertitle"> Price </legend>
 					<div class="filterinputs">
 						<input type="checkbox" name="price" value="1"> &lt; 200 <br>
@@ -146,7 +153,7 @@
 								<p>Galaxy TAB A 9.7</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/samsung-galaxy-tabA.jpg" alt=""></a>
+								<img src="../images/samsung-galaxy-tabA.jpg" alt="">
 							</div>
 							<div class="pricetag"> 299,90 €
 							</div>
@@ -165,7 +172,7 @@
 								<p>iPad Pro 9.7" </p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/APPLE_IPAD_PRO_97.jpg" alt=""></a>
+								<img src="../images/APPLE_IPAD_PRO_97.jpg" alt="">
 							</div>
 							<div class="pricetag"> 21,94 €/month
 							</div>
@@ -184,14 +191,14 @@
 								<p>ONE TOUCHE Pixi3 8</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/alcatel-pixi3.jpg" alt=""></a>
+								<img src="../images/alcatel-pixi3.jpg" alt="">
 							</div>
 							<div class="pricetag" style="text-decoration: line-through;"> 99,90 €
 							</div>
 							<div class="pricediscount">	69,00 €</div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -207,14 +214,14 @@
 								<p>Iconia W4 821</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/acer-iconia-w4.jpg" alt=""></a>
+								<img src="../images/acer-iconia-w4.jpg" alt="">
 							</div>
 							<div class="pricetag" style="text-decoration: line-through;"> 299,90 €
 							</div>
 							<div class="pricediscount">	199,90 €</div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -226,14 +233,14 @@
 								<p>Galaxy TabPro S 12</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/SAMSUNG_GALAXY_TABPRO.jpg" alt=""></a>
+								<img src="../images/SAMSUNG_GALAXY_TABPRO.jpg" alt="">
 							</div>
 							<div class="pricetag"> 1299,90 €
 							</div>
 							<div class="pricediscount"> <br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -245,14 +252,14 @@
 								<p>Mediapad T1 10</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/huawei-t1-10.jpg" alt=""></a>
+								<img src="../images/huawei-t1-10.jpg" alt="">
 							</div>
 							<div class="pricetag"> 249,90 €
 							</div>
 							<div class="pricediscount">	<br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -268,14 +275,14 @@
 								<p>iPad Mini 4</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/ipad-mini-4.jpg" alt=""></a>
+								<img src="../images/ipad-mini-4.jpg" alt="">
 							</div>
 							<div class="pricetag" style="text-decoration: line-through;"> 529,90 € 
 							</div>
 							<div class="pricediscount"> 489,00 € </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -287,14 +294,14 @@
 								<p>iPad Air 2</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/ipad-air-2.jpg" alt=""></a>
+								<img src="../images/ipad-air-2.jpg" alt="">
 							</div>
 							<div class="pricetag"> 23,90 €/month
 							</div>
 							<div class="pricediscount"> <br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -305,7 +312,7 @@
 		</div>
 	</div>
 </div>
-<!-- END SMART LIFE CATEGORIES -->
+<!-- END DEVICES GRID -->
 
 <!--FOOTER-->
 	<div class="footer">
