--- a/File Vari/alldevices.html
+++ b/File Vari/alldevices.html
@@ -100,6 +100,16 @@
 </nav>
 <!--END NAVBAR-->
 
+<!-- BREADCRUMB -->
+<div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb" >
+		  <li><a href="#">Devices</a></li>
+		  <li class="active">All Devices </li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
 
 <!--DEVICES IMAGE -->
 <div class="devimage">
