--- a/File Vari/appleipadpro.html
+++ b/File Vari/appleipadpro.html
@@ -10,13 +10,13 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>All SL Services</title>
+<title> Apple iPad Pro 9.7"</title>
 <!-- Bootstrap Core CSS -->
   <link href="bootstrap.new/css/bootstrap.css" rel="stylesheet">
 
  <!-- Custom CSS -->
  <link href="style2.css" rel="stylesheet">
- <link href="smartlifeservices.css" rel="stylesheet">
+ <link href="devicecontent.css" rel="stylesheet">
  
  <!-- Font awesome icons -->
  
@@ -75,9 +75,9 @@
 							</ul>
 					</li>
 					<li class="dropdown">
-						<a class="dropdown-toggle active" data-toggle="dropdown" href="#">Smart Life</a>
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Smart Life</a>
 							<ul class="dropdown-menu">
-								<li class="active"><a class="menu-title" href="#">All SL Services</a></li>
+								<li><a class="menu-title" href="#">All SL Services</a></li>
 								<li><a href="#">TV & Entertainment</a></li>
 								<li><a href="#">Person</a></li>
 								<li><a href="#">Home & Family</a></li>
@@ -104,66 +104,127 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="#">Smart Life</a></li>
-		  <li class="active"> All SL Services</li>
+		  <li><a href="#">Devices</a></li>
+		  <li><a href="#">Tablets & PCs </a></li>
+		  <li class="active">Apple iPad Pro 9.7" </li>
 		</ol>
 	</div>
 </div>
 <!-- END BREADCRUMB -->
 
 
-<!-- SMART LIFE CATEGORIES-->
-	<div class="allsmartlife">
-			<div class="tvandentertainment">
-				<img src="../images/tvandentertainment2.jpg">
-				<div class="textandbutton">
-					<h3> TV & ENTERTAINMENT</h3>
-					<p> Discover your favourite form of entertainment.</br> The fun begins now! </p>
-					<div class="row">
-						<div class="col three">				
-							<a href="#" class="btn btn-blue">Discover</a>			
-						</div>
+<!-- DEVICE PRESENTATION -->
+<div class="container-fluid">
+	<div class="row">
+		<div class="devpresentation">
+			<div class="col-xs-5">
+				<img src="../images/APPLE_IPAD_PRO_97.jpg" alt=""> 
+			</div>
+			<div class="col-xs-7">
+				<legend class="devicename"> <b>Apple</b> iPad Pro 9.7" </legend>
+				<ul class="speclist">
+					<li><i class="fa fa-tablet fa-2x"></i> &nbsp; 9.7"</li>
+					<li><i class="fa fa-stop fa-2x"></i> &nbsp; 2GB RAM </li>
+					<li><i class="fa fa-camera fa-2x"></i> &nbsp; 12 MP </li>
+					<li><i class="fa fa-battery-three-quarters fa-2x"></i> &nbsp; 5000mAh </li>
+					<li> Price: 1199,90 € </li>
+				</ul>
+				<div class="row">
+					<div class="col three">				
+						<a href="#" class="btn btn-blue disabled">Buy now</a>			
 					</div>
 				</div>
 			</div>
-			<div class="person">
-				<img src="../images/epayment.jpg">
-				<div class="textandbutton">
-					<h3> PERSON</h3>
-					<p> Organize and manage your digital payments: a new approach to the world of e-payment and digital ID!</p>
-					<div class="row">
-						<div class="col three">				
-							<a href="#" class="btn btn-blue"> Discover </a>			
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="homeandfamily">
-				<img src="../images/homeandfamily2.jpg">
-				<div class="textandbutton">
-					<h3> HOME & FAMILY </h3>
-					<p>Smart Life means simpler and safer life. </br> Also for your house and your family.</p>
-					<div class="row">
-						<div class="col three">				
-							<a href="#" class="btn btn-blue">Discover </a>			
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="healthandfitness">
-				<img src="../images/healthandfitness2.png">
-				<div class="textandbutton">
-					<h3> HEALTH & FITNESS </h3>
-					<p> Discover how health and fitness can improve your life and share it with your friends! </p>
-					<div class="row">
-						<div class="col three">				
-							<a href="#" class="btn btn-blue">Discover </a>			
-						</div>
-					</div>
-				</div>
-			</div>
+		</div>
 	</div>
-<!-- END SMART LIFE CATEGORIES -->
+</div>
+<!-- END DEVICE PRESENTATION -->
+
+<!-- TECNICAL SPECIFICATIONS -->
+<div class="container-fluid">
+	<div class="row">
+		<div class="techspecs">
+			<legend> Technical Specifications </legend>
+			<table>
+			  <tr>
+				<td>Network</td>
+				<td>4G LTE Advanced </td>
+			  </tr>
+			  <tr>
+				<td>Comms</td>
+				<td>Wi-Fi 802.11 a/b/g/n/ac, dual-band, hotspot</td>
+			  </tr>
+			  <tr>
+				<td>GPS</td>
+				<td>A-GPS, GLONASS</td>
+			  </tr>
+			  <tr>
+				<td>Display</td>
+				<td>LED-backlit IPS LCD, capacitive touchscreen, 16M colors, 9.7'', 1536 x 2048 pixels</td>
+			  </tr>
+			  <tr>
+				<td>Dimensions</td>
+				<td>240 x 169.5 x 6.1 mm</td>
+			  </tr>
+			  <tr>
+				<td>Weight</td>
+				<td>444 g</td>
+			  </tr>
+			  <tr>
+				<td>Camera</td>
+				<td>12 MP, f/2.2, 29mm, phase detection autofocus, dual-LED (dual tone) flash</td>
+			  </tr>
+			  <tr>
+				<td>Video</td>
+				<td>2160p@30fps, 1080p@30/60fps, 1080p@120fps, 720p@240fps</td>
+			  </tr>
+			  <tr>
+				<td>Internal Memory</td>
+				<td>256 GB, 2 GB RAM</td>
+			  </tr>
+			  <tr>
+				<td>Processor</td>
+				<td>Apple A9X</td>
+			  </tr>
+			  <tr>
+				<td>OS</td>
+				<td>iOS 9.3.2</td>
+			  </tr>
+			  <tr>
+				<td>Battery</td>
+				<td>5000mAh rechargeable lithium polymer battery</td>
+			  </tr>
+			  <tr>
+				<td>Sensors</td>
+				<td>Fingerprint, accelerometer, gyro, compass, barometer</td>
+			  </tr>
+			</table>
+		</div>
+	</div>
+</div>
+<!-- END TECHNICAL SPECIFICATIONS -->
+
+<!-- RELATED ASSISTANCE SERVICE -->
+<div class="container-fluid">
+	<div class="row">
+		<div class="assistanceservice">
+			<legend> Related Assistance Service </legend>
+			<a href="#"> Technical assistance </a>
+		</div>
+	</div>
+</div>
+<!-- END RELATED ASSISTANCE SERVICE -->
+
+<!-- RELATED SL SERVICE -->
+<div class="container-fluid">
+	<div class="row">
+		<div class="slservice">
+			<legend> Related Smart Life Service </legend>
+			<a href="#"> Whatever </a>
+		</div>
+	</div>
+</div>
+<!-- END RELATED SL SERVICE -->
 
 <!--FOOTER-->
 	<div class="footer">
