--- a/File Vari/smartphones.html
+++ b/File Vari/smartphones.html
@@ -101,18 +101,25 @@
 </nav>
 <!--END NAVBAR-->
 
-<!-- ALL DEVICES BY CATEGORY-->
+<!-- BREADCRUMB -->
 <div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb" >
+		  <li><a href="#">Devices</a></li>
+		  <li class="active">Smartphones & Cellphones </li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
+
+<!-- DEVICES GRID-->
+<div class="container-fluid devicecontainer">
 	<div class="row">
 		<div class="devicegrid">
 		<h2> SMARTPHONES & CELLPHONES </h2>
-		<!-- SMARTPHONES-->
 			<div class="col-md-3">
-				
 				<form class="filters">
-					<legend>
-						<h3> FILTERS </h3>
-					</legend>
+					<h3> FILTERS </h3>
 					<legend class="filtertitle"> Price </legend>
 					<div class="filterinputs">
 						<input type="checkbox" name="price" value="1"> &lt; 150 <br>
@@ -120,7 +127,6 @@
 						<input type="checkbox" name="price" value="3"> 300-400 <br>
 						<input type="checkbox" name="price" value="4"> &gt; 400 <br>
 					</div>
-					
 					<legend class="filtertitle"> Brand </legend>
 					<div class="filterinputs">
 						<input type="checkbox" name="brand" value="Apple"> Apple <br>
@@ -147,7 +153,7 @@
 								<p>Galaxy S7</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/SAMSUNG_S7.jpg" alt=""></a>
+								<img src="../images/SAMSUNG_S7.jpg" alt="">
 							</div>
 							<div class="pricetag"> 20,34 €/month
 							</div>
@@ -166,7 +172,7 @@
 								<p>Iphone SE </p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/iPhoneSE.jpg" alt=""></a>
+								<img src="../images/iPhoneSE.jpg" alt="">
 							</div>
 							<div class="pricetag"> 21,94 €/month
 							</div>
@@ -185,7 +191,7 @@
 								<p>P9</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/huawei-p9.jpg" alt=""></a>
+								<img src="../images/huawei-p9.jpg" alt="">
 							</div>
 							<div class="pricetag"> 749,90 €
 							</div>
@@ -208,14 +214,14 @@
 								<p>G5</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/LG_G5.jpg" alt=""></a>
+								<img src="../images/LG_G5.jpg" alt="">
 							</div>
 							<div class="pricetag"> 26,95 €/month
 							</div>
 							<div class="pricediscount">	<br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -227,14 +233,14 @@
 								<p>XperiaX</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/sony-xperiaX.jpg" alt=""></a>
+								<img src="../images/sony-xperiaX.jpg" alt="">
 							</div>
 							<div class="pricetag"> 629,90 €
 							</div>
 							<div class="pricediscount">	<br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -246,14 +252,14 @@
 								<p>iPhone 6s</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/apple-iPhone6s.jpg" alt=""></a>
+								<img src="../images/apple-iPhone6s.jpg" alt="">
 							</div>
 							<div class="pricetag"> 29,99 €/month
 							</div>
 							<div class="pricediscount">	<br> </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -269,14 +275,14 @@
 								<p>Lumia 950</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/microsoft-LUMIA950.jpg" alt=""></a>
+								<img src="../images/microsoft-LUMIA950.jpg" alt="">
 							</div>
 							<div class="pricetag" style="text-decoration: line-through;"> 29,90 €/month
 							</div>
 							<div class="pricediscount" > 27,00 €/month </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -288,14 +294,14 @@
 								<p>Galaxy A5</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/GALAXY_A5.jpg" alt=""></a>
+								<img src="../images/GALAXY_A5.jpg" alt="">
 							</div>
 							<div class="pricetag" style="text-decoration: line-through;"> 439,90 €
 							</div>
 							<div class="pricediscount"> 359,00 € </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -307,14 +313,14 @@
 								<p>K8</p>
 							</div>
 							<div class="thumbnail">
-								<a href="#"><img src="../images/lg-k8.jpg" alt=""></a>
+								<img src="../images/lg-k8.jpg" alt="">
 							</div>
 							<div class="pricetag" style="text-decoration: line-through;"> 20,99 €/month
 							</div>
 							<div class="pricediscount"> 18,00 €/month </div>
 							<div class="row">
 								<div class="col three">				
-									<a href="#" class="btn btn-blue">More details</a>			
+									<a href="#" class="btn btn-blue disabled">More details</a>			
 								</div>
 							</div>
 						</div>
@@ -325,7 +331,7 @@
 		</div>
 	</div>
 </div>
-<!-- END SMART LIFE CATEGORIES -->
+<!-- END DEVICES GRID -->
 
 <!--FOOTER-->
 	<div class="footer">
