--- a/File Vari/zyxelrepeater-ac750.html
+++ b/File Vari/zyxelrepeater-ac750.html
@@ -10,13 +10,13 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>All SL Services</title>
+<title> ZyXEL Repeater Wi-Fi AC750</title>
 <!-- Bootstrap Core CSS -->
   <link href="bootstrap.new/css/bootstrap.css" rel="stylesheet">
 
  <!-- Custom CSS -->
  <link href="style2.css" rel="stylesheet">
- <link href="smartlifeservices.css" rel="stylesheet">
+ <link href="devicecontent.css" rel="stylesheet">
  
  <!-- Font awesome icons -->
  
@@ -75,9 +75,9 @@
 							</ul>
 					</li>
 					<li class="dropdown">
-						<a class="dropdown-toggle active" data-toggle="dropdown" href="#">Smart Life</a>
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Smart Life</a>
 							<ul class="dropdown-menu">
-								<li class="active"><a class="menu-title" href="#">All SL Services</a></li>
+								<li><a class="menu-title" href="#">All SL Services</a></li>
 								<li><a href="#">TV & Entertainment</a></li>
 								<li><a href="#">Person</a></li>
 								<li><a href="#">Home & Family</a></li>
@@ -104,66 +104,101 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="#">Smart Life</a></li>
-		  <li class="active"> All SL Services</li>
+		  <li><a href="#">Devices</a></li>
+		  <li><a href="#">Modem & Networking</a></li>
+		  <li class="active">ZyXEL Repeater Wi-Fi AC750 </li>
 		</ol>
 	</div>
 </div>
 <!-- END BREADCRUMB -->
 
 
-<!-- SMART LIFE CATEGORIES-->
-	<div class="allsmartlife">
-			<div class="tvandentertainment">
-				<img src="../images/tvandentertainment2.jpg">
-				<div class="textandbutton">
-					<h3> TV & ENTERTAINMENT</h3>
-					<p> Discover your favourite form of entertainment.</br> The fun begins now! </p>
-					<div class="row">
-						<div class="col three">				
-							<a href="#" class="btn btn-blue">Discover</a>			
-						</div>
+<!-- DEVICE PRESENTATION -->
+<div class="container-fluid">
+	<div class="row">
+		<div class="devpresentation">
+			<div class="col-xs-5">
+				<img src="../images/zyxel1.jpg" alt=""> 
+			</div>
+			<div class="col-xs-7">
+				<legend class="devicename"> <b>ZyXEL</b>  Repeater Wi-Fi AC750</legend>
+				<ul class="speclist">
+					<li><i class="fa fa-gift fa-2x"></i> &nbsp; Wireless Range Extender, Ethernet Cable, Warranty Certificate, support CD</li>
+					<li><i class="fa fa-expand fa-2x"></i> &nbsp;46,5 x 62,3 x 90,9 mm </li>
+					<li> Price: 49,90 € </li>
+				</ul>
+				<div class="row">
+					<div class="col three">				
+						<a href="#" class="btn btn-blue disabled">Buy now</a>			
 					</div>
 				</div>
 			</div>
-			<div class="person">
-				<img src="../images/epayment.jpg">
-				<div class="textandbutton">
-					<h3> PERSON</h3>
-					<p> Organize and manage your digital payments: a new approach to the world of e-payment and digital ID!</p>
-					<div class="row">
-						<div class="col three">				
-							<a href="#" class="btn btn-blue"> Discover </a>			
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="homeandfamily">
-				<img src="../images/homeandfamily2.jpg">
-				<div class="textandbutton">
-					<h3> HOME & FAMILY </h3>
-					<p>Smart Life means simpler and safer life. </br> Also for your house and your family.</p>
-					<div class="row">
-						<div class="col three">				
-							<a href="#" class="btn btn-blue">Discover </a>			
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="healthandfitness">
-				<img src="../images/healthandfitness2.png">
-				<div class="textandbutton">
-					<h3> HEALTH & FITNESS </h3>
-					<p> Discover how health and fitness can improve your life and share it with your friends! </p>
-					<div class="row">
-						<div class="col three">				
-							<a href="#" class="btn btn-blue">Discover </a>			
-						</div>
-					</div>
-				</div>
-			</div>
+		</div>
 	</div>
-<!-- END SMART LIFE CATEGORIES -->
+</div>
+<!-- END DEVICE PRESENTATION -->
+
+<!-- TECNICAL SPECIFICATIONS -->
+<div class="container-fluid">
+	<div class="row">
+		<div class="techspecs">
+			<legend> Technical Specifications </legend>
+			<table>
+			  <tr>
+				<td>Wi-Fi Standard</td>
+				<td>802.11 a / b / g / n / ac</td>
+			  </tr>
+			  <tr>
+				<td>Wi-Fi Speed</td>
+				<td>300 Mbps * (2,4 GHz), 450 Mbps * (5 GHz) Reception: 300 Mbps * (2,4 GHz), 450 Mbps * (5 GHz)</td>
+			  </tr>
+			  <tr>
+				<td>Wi-Fi Security</td>
+				<td>64/128 bit WEP, WPA / WPA2, WPA-PSK / WPA2-PSK</td>
+			  </tr>
+			  <tr>
+				<td>Software</td>
+				<td>Online update of the firmware</td>
+			  </tr>
+			  <tr>
+				<td>Dimensions</td>
+				<td>46,5 x 62,3 x 90,9 mm</td>
+			  </tr>
+			  <tr>
+				<td>Weight</td>
+				<td>98 g</td>
+			  </tr>
+			  <tr>
+				<td>Included in the Price</td>
+				<td>Wireless Range Extender, Ethernet Cable, Warranty Certificate, support CD</td>
+			  </tr>
+			</table>
+		</div>
+	</div>
+</div>
+<!-- END TECHNICAL SPECIFICATIONS -->
+
+<!-- RELATED ASSISTANCE SERVICE -->
+<div class="container-fluid">
+	<div class="row">
+		<div class="assistanceservice">
+			<legend> Related Assistance Service </legend>
+			<a class="disabled"> Configuration Guide </a>
+		</div>
+	</div>
+</div>
+<!-- END RELATED ASSISTANCE SERVICE -->
+
+<!-- RELATED SL SERVICE -->
+<div class="container-fluid">
+	<div class="row">
+		<div class="slservice">
+			<legend> Related Smart Life Service </legend>
+			<a href="#"> Whatever </a>
+		</div>
+	</div>
+</div>
+<!-- END RELATED SL SERVICE -->
 
 <!--FOOTER-->
 	<div class="footer">
